1. Include the references to my two GitHub Repo 2. Use the GitHub Action to compile the All.tex file. 3. Update All.tex.

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: e6c55d106acf38668e0bde1967d70757b2298010
-% Date: 2023-11-07
+% Commit: 548339cf87b8da87d96a756a1d5bf4601f70b93b
+% Date: 2023-11-13
 % ---------------------------
 
 
@@ -13931,6 +13931,18 @@
   mrreviewer    = {Colin\ C.\ Graham}
 }
 @incollection{bourgain:84:sur,
+  author        = {Bourgain, Jean},
+  title         = {Sur le minimum de certaines sommes de cosinus},
+  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
+  series        = {Publ. Math. Orsay},
+  volume        = {84-1},
+  pages         = {Exp. No. 2, 7},
+  publisher     = {Univ. Paris XI, Orsay},
+  year          = {1984},
+  mrclass       = {11L03 (42A32)},
+  mrnumber      = {740713}
+}
+@incollection{bourgain:84:sur*1,
   author        = {Bourgain, J.},
   title         = {Sur l'approximation dans {$H^infty$}},
   booktitle     = {Seminar on the geometry of {B}anach spaces, {V}ol. {I}, {II} ({P}aris, 1983)},
@@ -13942,18 +13954,6 @@
   mrclass       = {30E10 (41A35 46J15)},
   mrnumber      = {781582},
   mrreviewer    = {Burglind\ J\"{o}ricke}
-}
-@incollection{bourgain:84:sur*1,
-  author        = {Bourgain, Jean},
-  title         = {Sur le minimum de certaines sommes de cosinus},
-  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
-  series        = {Publ. Math. Orsay},
-  volume        = {84-1},
-  pages         = {Exp. No. 2, 7},
-  publisher     = {Univ. Paris XI, Orsay},
-  year          = {1984},
-  mrclass       = {11L03 (42A32)},
-  mrnumber      = {740713}
 }
 @incollection{bourgain:84:vector,
   author        = {Bourgain, J.},
@@ -14526,23 +14526,7 @@
   doi           = {10.1007/BF02776302},
   url           = {https://doi.org/10.1007/BF02776302}
 }
-@incollection{bourgain:88:on*1,
-  author        = {Bourgain, J.},
-  title         = {On finite-dimensional homogeneous {B}anach spaces},
-  booktitle     = {Geometric aspects of functional analysis (1986/87)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1317},
-  pages         = {232--238},
-  publisher     = {Springer, Berlin},
-  year          = {1988},
-  isbn          = {3-540-19353-7},
-  mrclass       = {46B20},
-  mrnumber      = {950984},
-  mrreviewer    = {T.\ Figiel},
-  doi           = {10.1007/BFb0081744},
-  url           = {https://doi.org/10.1007/BFb0081744}
-}
-@article{bourgain:88:on*2,
+@article{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
@@ -14557,6 +14541,22 @@
   mrreviewer    = {Alberto\ de la Torre},
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
+}
+@incollection{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On finite-dimensional homogeneous {B}anach spaces},
+  booktitle     = {Geometric aspects of functional analysis (1986/87)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1317},
+  pages         = {232--238},
+  publisher     = {Springer, Berlin},
+  year          = {1988},
+  isbn          = {3-540-19353-7},
+  mrclass       = {46B20},
+  mrnumber      = {950984},
+  mrreviewer    = {T.\ Figiel},
+  doi           = {10.1007/BFb0081744},
+  url           = {https://doi.org/10.1007/BFb0081744}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -21311,6 +21311,22 @@
   doi           = {10.1214/19-AIHP983},
   url           = {https://doi.org/10.1214/19-AIHP983}
 }
+@misc{chen:22:some,
+  author        = {Chen, Le},
+  title         = {Some symbolic tools for the {F}ox {$H$}-function},
+  year          = {2022},
+  publisher     = {GitHub Repository},
+  howpublished  = {url{https://github.com/chenle02/Fox-H\_Symbolic\_Tools}},
+  note          = {Accessed: 11/08/2023}
+}
+@misc{chen:22:spdes-bib,
+  author        = {Chen, Le},
+  title         = {SPDEs-Bib: A Comprehensive Bibliography of Stochastic Partial Differential Equations and Related Topics},
+  year          = {2022},
+  publisher     = {GitHub Repository},
+  howpublished  = {url{https://github.com/chenle02/SPDEs-Bib}},
+  note          = {Accessed: 11/11/2023, V1.0}
+}
 @article{chen:90:moderate,
   author        = {Chen, Xia},
   title         = {Moderate deviations of {$B$}-valued independent random vectors},
@@ -25180,21 +25196,6 @@
 }
 @article{david.duplantier.ea:93:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
-  title         = {Renormalization of crumpled manifolds},
-  journal       = {Phys. Rev. Lett.},
-  fjournal      = {Physical Review Letters},
-  volume        = {70},
-  year          = {1993},
-  number        = {15},
-  pages         = {2205--2208},
-  issn          = {0031-9007},
-  mrclass       = {82B41 (81T17 81T30 82B28)},
-  mrnumber      = {1214561},
-  doi           = {10.1103/PhysRevLett.70.2205},
-  url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-@article{david.duplantier.ea:93:renormalization*1,
-  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
   title         = {Renormalization theory for interacting crumpled manifolds},
   journal       = {Nuclear Phys. B},
   fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
@@ -25207,6 +25208,21 @@
   mrnumber      = {1215176},
   doi           = {10.1016/0550-3213(93)90226-F},
   url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+@article{david.duplantier.ea:93:renormalization*1,
+  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
+  title         = {Renormalization of crumpled manifolds},
+  journal       = {Phys. Rev. Lett.},
+  fjournal      = {Physical Review Letters},
+  volume        = {70},
+  year          = {1993},
+  number        = {15},
+  pages         = {2205--2208},
+  issn          = {0031-9007},
+  mrclass       = {82B41 (81T17 81T30 82B28)},
+  mrnumber      = {1214561},
+  doi           = {10.1103/PhysRevLett.70.2205},
+  url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 @article{david.duplantier.ea:94:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
@@ -25370,21 +25386,6 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25398,6 +25399,21 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -56106,20 +56122,7 @@
   mrnumber      = {1915445},
   mrreviewer    = {Anton Wakolbinger}
 }
-@incollection{perkins:82:local,
-  author        = {Perkins, Edwin},
-  title         = {Local time and pathwise uniqueness for stochastic differential equations},
-  booktitle     = {Seminar on {P}robability, {XVI}},
-  series        = {Lecture Notes in Math.},
-  volume        = {920},
-  pages         = {201--208},
-  publisher     = {Springer, Berlin-New York},
-  year          = {1982},
-  mrclass       = {60H10},
-  mrnumber      = {658680},
-  mrreviewer    = {Toshio Yamada}
-}
-@article{perkins:82:local*1,
+@article{perkins:82:local,
   author        = {Perkins, Edwin},
   title         = {Local time is a semimartingale},
   journal       = {Z. Wahrsch. Verw. Gebiete},
@@ -56134,6 +56137,19 @@
   mrreviewer    = {E. \c{C}inlar},
   doi           = {10.1007/BF01957098},
   url           = {https://doi.org/10.1007/BF01957098}
+}
+@incollection{perkins:82:local*1,
+  author        = {Perkins, Edwin},
+  title         = {Local time and pathwise uniqueness for stochastic differential equations},
+  booktitle     = {Seminar on {P}robability, {XVI}},
+  series        = {Lecture Notes in Math.},
+  volume        = {920},
+  pages         = {201--208},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1982},
+  mrclass       = {60H10},
+  mrnumber      = {658680},
+  mrreviewer    = {Toshio Yamada}
 }
 @article{peszat.tindel:10:stochastic,
   author        = {Peszat, Szymon and Tindel, Samy},
@@ -60233,22 +60249,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {97},
-  year          = {1993},
-  number        = {1-2},
-  pages         = {103--112},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1240718},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01199314},
-  url           = {https://doi.org/10.1007/BF01199314}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -60262,6 +60262,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01192135},
   url           = {https://doi.org/10.1007/BF01192135}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {97},
+  year          = {1993},
+  number        = {1-2},
+  pages         = {103--112},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1240718},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01199314},
+  url           = {https://doi.org/10.1007/BF01199314}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -61982,21 +61998,6 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62010,6 +62011,21 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -67240,21 +67256,6 @@
   url           = {https://doi.org/10.1016/j.jde.2008.02.019}
 }
 @article{zhang:09:variational,
-  author        = {Zhang, Xicheng},
-  title         = {A variational representation for random functionals on abstract {W}iener spaces},
-  journal       = {J. Math. Kyoto Univ.},
-  fjournal      = {Journal of Mathematics of Kyoto University},
-  volume        = {49},
-  year          = {2009},
-  number        = {3},
-  pages         = {475--490},
-  issn          = {0023-608X},
-  mrclass       = {60H07 (60F10)},
-  mrnumber      = {2583599},
-  doi           = {10.1215/kjm/1260975036},
-  url           = {https://doi.org/10.1215/kjm/1260975036}
-}
-@article{zhang:09:variational*1,
   author        = {Zhang, Tusheng},
   title         = {Variational inequalities and optimization for {M}arkov processes associated with semi-{D}irichlet forms},
   journal       = {SIAM J. Control Optim.},
@@ -67269,6 +67270,21 @@
   mrreviewer    = {Arie Leizarowitz},
   doi           = {10.1137/080737630},
   url           = {https://doi.org/10.1137/080737630}
+}
+@article{zhang:09:variational*1,
+  author        = {Zhang, Xicheng},
+  title         = {A variational representation for random functionals on abstract {W}iener spaces},
+  journal       = {J. Math. Kyoto Univ.},
+  fjournal      = {Journal of Mathematics of Kyoto University},
+  volume        = {49},
+  year          = {2009},
+  number        = {3},
+  pages         = {475--490},
+  issn          = {0023-608X},
+  mrclass       = {60H07 (60F10)},
+  mrnumber      = {2583599},
+  doi           = {10.1215/kjm/1260975036},
+  url           = {https://doi.org/10.1215/kjm/1260975036}
 }
 @article{zhang:10:stochastic,
   author        = {Zhang, Xicheng},
