fix(All.tex): replace Statistics.eps with Statistics.png in the center of the document

--- a/All.tex
+++ b/All.tex
@@ -38,7 +38,7 @@
 \vfill
 
 \begin{center}
-  \includegraphics[scale=0.55]{Statistics.eps}
+  \includegraphics[scale=0.55]{Statistics.png}
 \end{center}
 
 \newpage
